django/django-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      affinity:
        # 1) ?¨Ïö©???∏Îìú Î≤îÏúÑÎ•?kube-node1, kube-node2Î°??úÌïú
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - kube-node1
                      - kube-node2

        # 2) Í∞ôÏ? app=django ?åÎìú?ºÎ¶¨??Í∞ôÏ? ?∏Îìú??Í∞ôÏù¥ Î™??àÍ≤å Í∞ïÏ†ú
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - django
              topologyKey: kubernetes.io/hostname

      imagePullSecrets:
        - name: dockerhub-cred

      containers:
        - name: django
          image: jjunch/django:43
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
