django/django-node1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-node1-deploy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: django
      node: node1
  template:
    metadata:
      labels:
        app: django
        node: node1
    spec:
      nodeName: kube-node1
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: django
          image: jjunch/django:26
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
