django/django-node2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-node2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      node: node2
  template:
    metadata:
      labels:
        app: django
        node: node2
    spec:
      nodeName: kube-node2
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: django
          image: jjunch/django:7
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
