django/django-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: django.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-svc
                port:
                  number: 80
